# QQfight

./: .gitignore  README.md
run/: collect_expert.sh  download_lafan1_g1_dataset.sh  evaluate.sh  prepare_lafan1_g1.sh  run_lafan1_g1_general_tracking.sh  run_mosaic_adaptor.sh  run_mosaic_gmt.sh  run_mosaic_pure_distillation.sh  run_mosaic_residual_adaptation.sh  train_estimator.sh  view_lafan1_reference_trajectory.sh
scripts/: analyze_dataset.py  batch_csv_to_npz.py  batch_npy_to_csv.py  batch_pkl_to_csv.py  csv_to_npz.py  replay_npz.py  train_ref_vel_estimator.py  vq_similarity.py
scripts/rsl_rl/: cli_args.py  collect_expert_trajectories.py  play.py  train.py
source/rsl_rl/rsl_rl/algorithms/: __init__.py  distillation.py  mosaic.py  ppo.py
source/rsl_rl/rsl_rl/modules/: __init__.py  actor_critic.py  actor_critic_attention.py  actor_critic_fsq.py  actor_critic_recurrent.py  actor_critic_transformer.py  actor_critic_vq.py  residual_actor_critic.py  student_teacher.py  velocity_estimator.py  velocity_estimator_transformer.py
source/whole_body_tracking/whole_body_tracking/assets/pnd_description/: CMakeLists.txt  package.xml
source/whole_body_tracking/whole_body_tracking/assets/pnd_description/launch/: view_robot.launch.py
source/whole_body_tracking/whole_body_tracking/assets/pnd_description/meshes/adam_lite_agx/: vn100_0001.dae
source/whole_body_tracking/whole_body_tracking/assets/pnd_description/mjcf/: adam_lite_agx.xml
source/whole_body_tracking/whole_body_tracking/assets/pnd_description/urdf/adam/: adam_lite_agx.urdf
(+36 files in other folders)
