<?xml version="1.0"?>
<package format="2">
    <name>pnd_description</name>
    <version>0.3.2</version>
    <description>PND robot description files</description>
    <maintainer email="hitsunzhenguo@gmail.com">Zhenguo Sun</maintainer>
    <license>BSD</license>
    <author email="hitsunzhenguo@gmail.com">Zhenguo Sun</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
